syntax = "proto3";
//包名
option java_package = "com.huyu.protobuf";
//源文件类名
option java_outer_classname = "MonsterRespProto";
message MonsterResp{
    int32 monster_id = 1;
    string monster_name = 2;
    int32 monster_blood = 3;
    int32 harm = 4;
    bool status =5;
}